add title to the app

--- a/fetchAPI_test.html
+++ b/fetchAPI_test.html
@@ -9,8 +9,12 @@
 </head>
 <body>
   <div id="dictionaryApp">
-    <input type="text" id="word-input" value="definition">
-    <input type="button" id="search-btn" value="Search">
+    <header>
+      <h2 class="app-title">Merriam Webster Dictionay</h2>
+      <input type="text" id="word-input" value="definition">
+      <input type="button" id="search-btn" value="Search">
+    </header>
+
     <h1 id="word">definition</h1>
     <div class="word-meta">
     </div>
