style the head and wrap <main> tag around definitions tag

--- a/fetchAPI_test.html
+++ b/fetchAPI_test.html
@@ -11,15 +11,16 @@
   <div id="dictionaryApp">
     <header>
       <h2 class="app-title">Merriam Webster Dictionay</h2>
-      <input type="text" id="word-input" value="definition">
+      <input type="text" id="word-input" value="definition"><br>
       <input type="button" id="search-btn" value="Search">
     </header>
-
+  <main>
     <h1 id="word">definition</h1>
     <div class="word-meta">
     </div>
     <div id="definitions"></div>
   </div>
+  </main>
 
   <script src="app.js" type="text/javascript"></script>
 </body>
