add lite to title

--- a/fetchAPI_test.html
+++ b/fetchAPI_test.html
@@ -14,7 +14,7 @@
     </div>
     <div class="header-wrapper">
     <header>
-      <div class="logo-container"><span id="logo"></span><h2 class="app-title">Dictionary</h2>
+      <div class="logo-container"><span id="logo"></span><h2 class="app-title">Dictionary Lite</h2>
       </div>
       <div class="search-container"><input type="text" id="word-input" value="definition">
       <input type="button" id="search-btn" value="Define">
